Fix visibility on utenlandsopphold

--- a/src/app/components/interactive-list-element/interactiveListElement.less
+++ b/src/app/components/interactive-list-element/interactiveListElement.less
@@ -10,6 +10,9 @@
     padding: 1rem;
     position: relative;
     margin-bottom: 1rem;
+    &:last-child {
+        margin-bottom: 0;
+    }
 
     &__top {
         .title {
