--- a/src/app/components/utenlandsopphold-modal/utenlandsoppholdModal.less
+++ b/src/app/components/utenlandsopphold-modal/utenlandsoppholdModal.less
@@ -1,9 +1,10 @@
 @import '../../styles/variables.less';
 
 .utenlandsoppholdModal {
-    max-width: 26rem;
-    min-height: 24rem;
+    max-width: 32rem;
+    min-height: 32rem;
     width: 100%;
+    padding: 2rem;
 
     &__title {
         margin-bottom: @paddingLarge;
